2008-06-19  Vivien Malerba <malerba@gnome-db.org>

	* providers/firebird: started re-write of Firebird provider
	* providers/mysql: more work (mainly on the meta data) from
	Carlos Savoretti

2008-06-15  Vivien Malerba <malerba@gnome-db.org>

	* providers/mysql/mysql_specs_dsn.xml.in:
	* providers/mysql/gda-mysql-provider.c: added a COMPRESS option to specify the
	CLIENT_COMPRESS flag when opening the connection
	* WixInstaller/*: configuration files to use with the Wix Windows
	installer to produce .msm and .msi files
	* configure.in: also use the mysql_config5 program when detecting a
	MySQL installation
	* libgda/gda-config.c: crasher fixed
	* tools/gda-sql.c: better interraction with the Windows console
	* libgda/binreloc/gda-binreloc.c: cut the last "bin" part of a path
	under MacOS X

2008-06-10  Vivien Malerba <malerba@gnome-db.org>

	* configure.in: if no --with-postgres or --with-mysql are passed to the configure
	script, then try to find PotgreSQL or MySQL
	* libgda/gda-connection.c:
	* libgda/gda-data-model-dsn-list.c:
	* libgda/gda-data-model-query.c:
	* libgda/gda-init.c:
	* libgda/gda-meta-store.c:
	* libgda/gda-meta-struct.c:
	* libgda/gda-server-operation.c:
	* libgda/gda-server-provider.c:
	* libgda/gda-server-provider-extra.c:
	* libgda/gda-util.c:
	* libgda/gda-xa-transaction.c:
	* libgda/handlers/gda-handler-bin.c:
	* libgda/handlers/gda-handler-boolean.c:
	* libgda/handlers/gda-handler-numerical.c:
	* libgda/handlers/gda-handler-time.c:
	* libgda/handlers/gda-handler-type.c:
	* libgda/sqlite/gda-sqlite-handler-bin.c:
	* libgda/gda-data-access-wrapper.c:
	* libgda/gda-data-model-array.c:
	* libgda/gda-data-model-dir.c:
	* libgda/gda-data-model-row.c:
	* libgda-report/DocBook/gda-report-docbook-document.c:
	* libgda-report/RML/gda-report-rml-document.c:
	* libgda-report/gda-report-document.c:
	* providers/mysql/mysql_specs_create_db.xml.in:
	* providers/mysql/mysql_specs_create_table.xml.in:
	* providers/postgres/postgres_specs_create_db.xml.in: