@@ -1,5 +1,10 @@
 2008-06-19  Vivien Malerba <malerba@gnome-db.org>
 
+	* libgda/gda-meta-struct.c:
+	* providers/postgres/gda-postgres-ddl.c: minor corrections
+
+2008-06-19  Vivien Malerba <malerba@gnome-db.org>
+
 	* providers/firebird: started re-write of Firebird provider
 	* providers/mysql: more work (mainly on the meta data) from
 	Carlos Savoretti
